# game-of-life

./: .gitignore  CMakeLists.txt  README.md
include/: gameLife.hpp  patterns.hpp  simulation.hpp
src/: gameLife.cpp  main.cpp  patterns.cpp  simulation.cpp
